--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <p class="lead mb-5">Hello, <br>
 
-          My name is Plamen, I’m 24 years old. I have been studying web programming for over <strong>1 year.</strong>
+          My name is Plamen, I’m 24 years old. I have been studying web programming for just over <strong>1 year.</strong>
           <br>
           I am looking for a wide array of learning and employment opportunities. Anywhere from paid internships to
           part-time/full-time employment as a front-end junior dev. I am strongly interested in becoming a <br>
