--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
               professionally in a company with experienced professionals with whom I have daily communication.
               <br>
               <br> I have experience with <strong>JS, Ajax, Jquery, JSON, Grid, Flex-box</strong> responsive design,
-              <strong>Bootstrap</strong> and I
-              have been working
-              as a
-              QA for Gameloft (a gaming company).</p>
+              <strong>Bootstrap</strong></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"> Jan 2020 - Present</span>
