--- a/index.html
+++ b/index.html
@@ -68,14 +68,37 @@
         </div>
         <p class="lead mb-5">Hello, <br>
 
-          My name is Plamen, I’m 24 years old. I have been studying web programming for just over <strong>1 year.</strong>
+          My name is Plamen, I’m 25 years old and I love <strong>functional programming</strong> and to explore new opportunities. 
           <br>
-          I am looking for a wide array of learning and employment opportunities. Anywhere from paid internships to
-          part-time/full-time employment as a front-end junior dev. I am strongly interested in becoming a <br>
-          <strong>full-stack
-            developer</strong>. I’m currently studying <strong>ReactJS, Node.js, and Express.</strong></p>
+          I am a passionate Software Developer 🚀 having an experience of building Web applications with <strong>JavaScript / React JS / Node JS / React Native</strong>  and some other cool libraries and frameworks.
+          <br>
+
+          <h4>What I do ? </h4>            
+        </p>
+
+        <ul class="what-i-do">
+          <li>⚡ Building full functional application from scratch with both frontend, backend and database integration</li>
+          <li>⚡ Improving existing applications. Redesing, optimizing and adding new features</li>
+          <li>⚡ Develop highly interactive Front end / User Interfaces for your web and mobile applications</li>
+          <li>⚡ Progressive Web Applications ( PWA ) in normal and SPA Stacks</li>
+          <li>⚡ Integration of third party services such as Firebase</li>
+        </ul>     
+
+        <p class="lead">
+          Currently I am mostly working with <strong>JavaScript ES6, jQuery, PHP 8, HTML/SASS and WordPress</strong>.
+          I am a leading developer of all websites of the company in which I work. My daily tasks include managment and developing new websites or features/widgets for already existing ones. Also I was the developer of the <strong>Registration API</strong> for our new trading platform. 
+          <br>
+          <br>
+          In my future career I want to develop as a front-end developer with  <strong>React.js</strong>.
+          <br>
+          <br>
+          In my free time I love to travel and go out with my friends. Also I am a huge fan of motorsport, modern music and movies.
+        </p>
+
+          
         <div class="social-icons">
-          <a href="https://plamen-stoyanov.github.io/Portfolio/">
+          <strong>GitHub</strong>
+          <a href="https://github.com/Plamen-Stoyanov">
             <i class=" fab fa-github"></i>
           </a>
         </div>
@@ -94,18 +117,102 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Web Developer</h3>
+            <div class="subheading mb-3">Tiebreak Solutions Bulgaria</div>
+            <p>Working as a <strong>Front-end Web Developer </strong> with JavaScript, PHP and WordPress
+              for a large fintech company.
+              <br>
+              <br> 
+              <ul>
+                <li>
+                  JavaScript ES6
+                </li>
+                <li>
+                  PHP 8
+                </li>
+                <li>
+                  JSON / XML / JSX / CSV
+                </li>
+                <li>
+                  CMS / WordPress Development
+                </li>
+                <li>
+                  Bootstrap 5
+                </li>
+                <li>
+                  Less, SASS/SCSS
+                </li>
+                <li>
+                  Amazon Web Services (AWS) / Amazon S3 / CloudFront
+                </li>
+                <li>
+                  Git / Sourcetree
+                </li>
+                <li>
+                  RESTful WebServices / REST API
+                </li>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"> Jul 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Wordpress Developer</h3>
             <div class="subheading mb-3">Marvelers</div>
-            <p>Currently, I am working as a <strong>Freelancer – Wordpress Web Dev with HTML/CSS, Javascript,
+            <p>Working as a <strong>Wordpress Web Dev with HTML/CSS, Javascript,
                 Bootstrap</strong> and <strong>PHP</strong>
-              for a small startup company that develops websites and online stores, but I have a great desire to develop
-              professionally in a company with experienced professionals with whom I have daily communication.
+              for a small startup company that develops websites and online stores.
               <br>
-              <br> I have experience with <strong>JS, Ajax, Jquery, JSON, Grid, Flex-box</strong> responsive design,
+              <br> Strong experience with <strong>JS, Ajax, Jquery, JSON, Grid, Flex-box</strong> responsive design,
               <strong>Bootstrap</strong></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary"> Jan 2020 - Present</span>
+            <span class="text-primary"> Jan 2020 - Jun 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Freelance Web Developer</h3>
+            <div class="subheading mb-3">Gun.io</div>
+            <ul>
+              <li>
+                Building websites for small and medium businesses
+              </li>
+              <li>
+                Building tools to improve development process
+              </li>
+              <li>
+                Designing software applications architecture 
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"> Jul 2018 - Sep 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Freelance Web Developer</h3>
+            <div class="subheading mb-3">Upwork</div>
+              <ul>
+                <li>
+                  Building websites for small and medium businesses
+                </li>
+                <li>
+                  Building tools to improve development process
+                </li>
+                <li>
+                  Designing software applications architecture 
+                </li>
+              </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"> Mar 2017 - Jun 2018</span>
           </div>
         </div>
 
@@ -138,7 +245,7 @@
             <div>Javascript Web Developer</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jan 2019 - Present</span>
+            <span class="text-primary">Jan 2017 - Jan 2019</span>
           </div>
         </div>
 
@@ -183,6 +290,16 @@
               </div>
             </div>
         </section>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Massachusetts Institute of Technology</h3>
+            <div>Robotic and Intelligent Systems</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2017 - 2018</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
@@ -238,6 +355,34 @@
         <section>
           <div class="container">
             <div class="row">
+              <div class="col-sm-4 col-md-4">
+                <div class="subheading mb-3">Front-End</div>
+                <ul class="fa-ul mb-0">
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    React.js / Hooks / Router / Native </li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Bootstrap 5</li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    SASS/SCSS</li>
+                </ul>
+              </div>
+              <div class="col-sm-4 col-md-4">
+                <div class="subheading mb-3">Back-End</div>
+                <ul class="fa-ul mb-0">
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Node.js</li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Express.js</li>
+                  <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Passport.js</li>
+                </ul>
+              </div>
               <div class="col-sm-4 col-md-4 skills-custom">
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
@@ -270,11 +415,11 @@
                 </ul>
               </div>
               <div class="col-sm-4 col-md-4 skills-custom">
-                <div class="subheading mb-3">Vanilla JavaScript</div>
+                <div class="subheading mb-3">JavaScript</div>
                 <ul class="fa-ul mb-0">
                   <li>
                     <i class="fa-li fa fa-check"></i>
-                    Funamentals (Variables, data types, functions)</li>
+                    jQuery</li>
                   <li>
                     <i class="fa-li fa fa-check"></i>
                     DOM & JSON</li>
@@ -284,6 +429,9 @@
                   <li>
                     <i class="fa-li fa fa-check"></i>
                     Modern JS(ES6)</li>
+                    <li>
+                      <i class="fa-li fa fa-check"></i>
+                      Socket.io</li>
                 </ul>
               </div>
               <div class="col-sm-4 col-md-4">
@@ -291,16 +439,28 @@
                 <ul class="fa-ul mb-0">
                   <li>
                     <i class="fa-li fa fa-check"></i>
-                    Git</li>
+                    Git / Sourcetree</li>
                   <li>
                     <i class="fa-li fa fa-check"></i>
-                    Browser Dev Tool</li>
+                    Jira Project managment tools</li>
                   <li>
                     <i class="fa-li fa fa-check"></i>
-                    VS Code Extensions</li>
+                    AWS / S3 / CloudBerry</li>
                   <li>
                     <i class="fa-li fa fa-check"></i>
-                    NPM / Yarn</li>
+                    NPM / Yarn / Bash / Powershell</li>
+                    <li>
+                      <i class="fa-li fa fa-check"></i>
+                      Figma 
+                    </li>
+                    <li>
+                      <i class="fa-li fa fa-check"></i>
+                      ZenDesk
+                    </li>
+                    <li>
+                      <i class="fa-li fa fa-check"></i>
+                      Postman
+                    </li>
                 </ul>
               </div>
               <div class="col-sm-4 col-md-4">
@@ -334,6 +494,7 @@
                     mySQL</li>
                 </ul>
               </div>
+             
             </div>
           </div>
         </section>
